# Parallel.GAMIT

./: .gitignore  CITATION.cff  GeoDE_User_Manual.md  INSTALL.md  INSTRUCTIONS  MANIFEST.in  README.md  environment.yml  example_campaign.json  pyproject.toml  setup.py
GAMITArchive/: __init__.py
archive/: __init__.py
classes/: Utils.py  dbConnection.py  pyArchiveStruct.py  pyBunch.py  pyDate.py  pyETM.py  pyETM1.py  pyEvents.py  pyJobServer.py  pyOptions.py  pyPPP.py  pyRinex.py  pyRinex_old.py  pyRunWithRetry.py  pyStationInfo.py  pyVoronoi.py  snxParse.py  zipfile.py
com/: AlterETM.py  ApplyCountryCode.py  ArchiveService.py  CampaignPlanner.py  CloseStationInfo.py  ConvertDate.py  ConvertMetadata.py  ConvertTrimble.py  CreateEtmFunctions.py  DRA.py  DownloadSources.py  DownloadSourcesFill.py  EtmStacker.py  FixPlate.py  GenerateKml.py  GenerateSinex.py  IntegrityCheck.py  LocateRinex.py  ModelProcessing.py  NEQStack.py  OTL_FES2014b.py  ParallelGamit.py  PlotETM.py  PlotMapView.py  QueryETM.py  ReadPackage.py  S-score.py  ScanArchive.py  Stacker.py  StationInfoEdit.py  StationKmz.py  StationReport.py  SyncMetadata.py  SyncOrbits.py  TrajectoryFit.py  UpdateEarthquakes.py  WeeklyCombination.py  Ztd2trp.py  amend.py  aws-sync.py  (+3 more)
configuration_files/: .coveragerc  cfg.cfg  gnss_data.cfg  gnss_data_backup.sql  gnss_data_template.cfg  gnss_data_template.sql  link_tables.sh  session.cfg  sestbl.
database/: gnss_data_dump.sql
docs/: conf.py  modules.rst  pgamit.rst  pgamit.tests.rst
geode/: ConvertRaw.py  StationList.py  Utils.py  __init__.py  atx_parser.py  cluster.py  dbConnection.py  network.py  plots.py  proto_download.py  pyArchiveStruct.py  pyDate.py  pyETM.py  pyEvents.py  pyGamitSession.py  pyGlobkTask.py  pyJobServer.py  pyLeastSquares.py  pyOTL.py  pyOkada.py  pyOptions.py  pyPPP.py  pyParseAntex.py  pyProducts.py  pyRinex.py  pyRinexName.py  pyRunWithRetry.py  pyStack.py  pyStation.py  pyZTD.py  snxParse.py  station_selector.py
gpys/: ArchiveService.py  __init__.py  test.py
pgamit/: ConvertRaw.py  (+24 more)
(+218 files in other folders)
