[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "geode-gnss"
dynamic = ["version"]
description = "A Python wrapper to parallelize GAMIT executions"
authors = [
  { name = "Demián D. Gómez", email = "demiang@gmail.com"},
]
maintainers = [
  { name = "Demián D. Gómez", email = "demiang@gmail.com"},
  { name = "Shane Grigsby (espg)", email = "refuge@rocktalus.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["GNSS", "GAMIT", "geodesy", "GPS", "parallel processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pandas",
    "tqdm==4.66.5",
    "anthropic",
    "textual>=0.50.0",
    "rich>=13.0.0",
    "dispy",
    "psycopg2-binary==2.9.9",
    "pycos",
    "country-converter",
    "charset-normalizer==3.4.4",
    "earthscope-cli==0.8.2",
    "earthscope-sdk==0.2.0",
    "basemap==1.4.0",
    "cryptography",
    "dirsync>=2.2.4",
    "geopy==2.4.1",
    #h5py==3.4.0
    #hdf5storage>=0.1.18
    "usgs-libcomcat",
    "matplotlib>=2.0.0",
    "munch==2.5.0",
    "netifaces==0.10.9",
    "networkx",
    "paramiko",
    "psutil>=5.6.3",
    "pysftp==0.2.9",
    "requests==2.33.0",
    "scandir>=1.6",
    "scikit-learn>=1.1",
    "scipy>=1.2.0",
    "simplekml==1.3.6",
    "xmltodict==0.13.0",
    "scikit-image",
    "shapely",
    "obspy",
    "geopandas",
    "cartopy>=0.22",
    "pillow>=9.0",
    "staticmap>=0.5.4",
    "weasyprint>=60.0"
]

[project.scripts]

[project.urls]
"Homepage" = "https://github.com/demiangomez/geode"
"Bug Tracker" = "https://github.com/demiangomez/geode/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["geode*"]

[tool.setuptools.package-data]
"geode.reports" = ["geode_logo.png"]

[tool.setuptools_scm]
